15-keycloak/keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
#    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/secure-backends: "false"
spec:
  tls:
  - hosts:
    - keycloak.apps.example.com
    secretName: keycloak-tls
  rules:
  - host: keycloak.apps.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak-http
          servicePort: 80
